--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+/.ackrc
+!/.gitignore
+/blib/
+/_eumm/
+/pm_to_blib
 /Makefile
 /Makefile.old
-/MYMETA.yml
-/blib
-/pm_to_blib
-/*.tar.gz
+/MANIFEST.bak
+/MANIFEST.SKIP.bak
+/MYMETA.*
+/HTTP-Message-*/
+/HTTP-Message-*.tar.gz
