Convert to dzil.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
+**~
 /.ackrc
-!/.gitignore
 /blib/
+.build
 /_eumm/
-/pm_to_blib
+!/.gitignore
+/HTTP-Message-*/
+/HTTP-Message-*.tar.gz
 /Makefile
 /Makefile.old
 /MANIFEST.bak
 /MANIFEST.SKIP.bak
 /MYMETA.*
-/HTTP-Message-*/
-/HTTP-Message-*.tar.gz
-**~
+/pm_to_blib
+*.sw*
+.tidyall.d
