--- a/tidyall.ini
+++ b/tidyall.ini
@@ -1,22 +1,14 @@
 [PerlTidy]
 select = **/*.{pl,pm,t,psgi}
+ignore = .build/**/*
+ignore = HTTP-Message-*/**/*
+ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
-ignore = blib/**/*
-ignore = .build/**/*
-ignore = HTTP-Message-*/**/*
+ignore = t/zzz-*
+ignore = xt/**/*
 argv = --profile=$ROOT/perltidyrc
-
-;[PerlCritic]
-;select = **/*.{pl,pm,t,psgi}
-;ignore = t/00-*
-;ignore = t/author-*
-;ignore = t/release-*
-;ignore = blib/**/*
-;ignore = .build/**/*
-;ignore = HTTP-Message-*/**/*
-;argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
 
 [SortLines::Naturally]
 select = .gitignore
