Re-add Compress::Raw::Zlib to prereqs after dzil conversion
Looks like it was introduced in 4157e9f0

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ x_IRC = irc://irc.perl.org/#lwp
 x_MailingList = mailto:libwww@perl.org
 
 [Prereqs]
+Compress::Raw::Zlib = 0
 Encode = 2.21
 Encode::Locale = 1
 Exporter = 5.57
