--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ script:
   - make
   - make test
   - make install
-  - cpanm --test-only LWP
-  - cpanm --test-only Plack
-  - cpanm --test-only WWW::Mechanize
+  - cpanm --test-only LWP || ( cat ~/.cpanm/build.log; false )
+  - cpanm --test-only Plack || ( cat ~/.cpanm/build.log; false )
+  - cpanm --test-only WWW::Mechanize || ( cat ~/.cpanm/build.log; false )
