--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
   - make
   - make test
   - make install
+  - unset AUTHOR_TESTING
   - cpanm --test-only LWP || ( cat ~/.cpanm/build.log; false )
   - cpanm --test-only Plack || ( cat ~/.cpanm/build.log; false )
   - cpanm --test-only WWW::Mechanize || ( cat ~/.cpanm/build.log; false )
