Run release tests in travis. but make the changes-has-content test TODO only for master.
This will prod pull request submitters to add a Changes entry.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ perl:
   - "5.12"
   - "5.10"
   - "5.8"
+env:
+  global:
+    - AUTHOR_TESTING=1
+    - AUTOMATED_TESTING=1
+    - RELEASE_TESTING=1
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init
