--- a/dist.ini
+++ b/dist.ini
@@ -23,12 +23,23 @@ perl = 5.008001
 URI = 1.10
 
 [@Author::OALDERS]
+; all these tests are TODO
 -remove = PodCoverageTests
 -remove = Prereqs
 -remove = Test::Perl::Critic
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
 -remove = Test::TidyAll
+
+[MojibakeTests]
+[Test::Version]
+[Test::Compile]
+bail_out_on_fail = 1
+xt_mode = 1
+
+[Test::Portability]
+; [Test::EOL]       ; TODO
+[PodSyntaxTests]
 
 [Test::ChangesHasContent]
 [Substitute]
