--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - build-dist
   - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
 install:
-  - cpan-install --deps       # installs prereqs, including recommends
+  - cpan-install --deps || ( cat ~/.cpanm/build.log; false )  # installs prereqs, including develop, recommends
 script:
   - perl Makefile.PL
   - make
