Remove Plack from AppVeyor Tests

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,5 +32,6 @@ build: off
 test_script:
   - '%cpanm% -v .'
   - '%cpanm% --test-only -v LWP'
-  - '%cpanm% --test-only -v Plack'
   - '%cpanm% --test-only -v WWW::Mechanize'
+# plack currently fails on CygWin and is slow to test.
+#  - '%cpanm% --test-only -v Plack'
