Remove manually added dzil plugins which are now in the OALDERS bundle

--- a/dist.ini
+++ b/dist.ini
@@ -26,19 +26,15 @@ URI = 1.10
 ; all these tests are TODO
 -remove = PodCoverageTests
 -remove = Prereqs
+-remove = Test::EOL
 -remove = Test::Perl::Critic
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
 -remove = Test::TidyAll
 
-[MojibakeTests]
-[Test::Version]
 [Test::Compile]
 bail_out_on_fail = 1
 xt_mode = 1
-
-[Test::Portability]
-; [Test::EOL]       ; TODO
 
 [Test::ChangesHasContent]
 [Substitute]
