--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Gisle Aas <gisle@activestate.com>
 license = Perl_5
 main_module = lib/HTTP/Message.pm
 copyright_holder = Gisle Aas
-copyright_year   = 1994-2017
+copyright_year   = 1994
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#lwp
