Skip Pod coverage tests

--- a/dist.ini
+++ b/dist.ini
@@ -24,10 +24,10 @@ URI = 1.10
 
 [@Author::OALDERS]
 ; all these tests are TODO
--remove = PodCoverageTests
 -remove = Prereqs
 -remove = Test::EOL
 -remove = Test::Perl::Critic
+-remove = Test::Pod::Coverage::Configurable
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
 -remove = Test::TidyAll
