Enable static install

--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,8 @@ URI = 1.10
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
 -remove = Test::TidyAll
+StaticInstall.mode = on
+StaticInstall.dry_run = 0
 
 [Test::Compile]
 bail_out_on_fail = 1
