--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,6 @@ x_IRC = irc://irc.perl.org/#lwp
 x_MailingList = mailto:libwww@perl.org
 
 [Prereqs]
-Clone = 0
 Compress::Raw::Zlib = 0
 Encode = 3.01
 Encode::Locale = 1
@@ -22,6 +21,9 @@ LWP::MediaTypes = 6
 MIME::Base64 = 2.1
 perl = 5.008001
 URI = 1.10
+
+[Prereqs / Recommends]
+Clone = 0
 
 [@Author::OALDERS]
 ; all these tests are TODO
