keep Clone out of required deps
and "suggests" is needed instead of "recommends" to prevent cpanm from installing it.

--- a/dist.ini
+++ b/dist.ini
@@ -22,9 +22,6 @@ MIME::Base64 = 2.1
 perl = 5.008001
 URI = 1.10
 
-[Prereqs / Recommends]
-Clone = 0
-
 [@Author::OALDERS]
 ; all these tests are TODO
 -remove = Prereqs
@@ -36,6 +33,11 @@ Clone = 0
 -remove = Test::TidyAll
 StaticInstall.mode = on
 StaticInstall.dry_run = 0
+
+[Prereqs::Soften]
+to_relationship = suggests
+copy_to = develop.requires
+module = Clone
 
 [Test::Compile]
 bail_out_on_fail = 1
