Support for Brotli encoding
This commit adds encoding to the code written by trizen with #164, which
added decoding. It also adds tests.

Also makes sure recommended modules are installed during the Linux
github action build, which we were already doing on Mac.

Closes #163.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -69,6 +69,7 @@ jobs:
           cpm install -g
           --cpanfile cpanfile
           --with-develop
+          --with-recommends
           --with-suggests
           --show-build-log-on-failure
       - name: Run Tests
