--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -137,8 +137,9 @@ jobs:
           - "5.28"
           - "5.30"
           - "5.32"
-          - "5.34"
-          - "5.36"
+          # As of 2022-06-06 5.32 is the latest Strawberry Perl
+          # - "5.34"
+          # - "5.36"
     name: Perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     needs: build
     steps:
