Use versions to pin GH actions

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -28,7 +28,7 @@ jobs:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           RELEASE_TESTING: 1
         run: auto-build-and-test-dist
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v3
         with:
           name: build_dir
           path: build_dir
@@ -62,7 +62,7 @@ jobs:
         id: with-recommends
         if: matrix.perl-version >= 5.14
         run: echo '::set-output name=flag::--with-recommends'
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@v3
         with:
           name: build_dir
           path: .
@@ -111,7 +111,7 @@ jobs:
         id: with-recommends
         if: matrix.perl-version >= 5.14
         run: echo '::set-output name=flag::--with-recommends'
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@v3
         with:
           name: build_dir
           path: .
@@ -162,7 +162,7 @@ jobs:
         with:
           perl-version: ${{ matrix.perl-version }}
           distribution: strawberry
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@v3
         with:
           name: build_dir
           path: .
