Always rely on Clone::clone() as the provider of HTTP::Headers::clone()
Require at least 0.46 of Clone, which now supports back to Perl 5.8.1,
thanks to a PR from HAARG.

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ LWP::MediaTypes = 6
 MIME::Base64 = 2.1
 perl = 5.008001
 URI = 1.10
+Clone = 0.46
 
 [@Author::OALDERS]
 ; all these tests are TODO
@@ -34,11 +35,6 @@ URI = 1.10
 -remove = Test::TidyAll
 StaticInstall.mode = on
 StaticInstall.dry_run = 0
-
-[Prereqs::Soften]
-to_relationship = suggests
-copy_to = develop.requires
-module = Clone
 
 [Prereqs::Soften / Brotli]
 to_relationship = recommends
