--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -79,7 +79,7 @@ jobs:
           --show-build-log-on-failure
       - name: Run Tests
         if: success()
-        run: prove -lr --jobs 2 t xt
+        run: prove -lr --jobs 2 t
   test_macos:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -129,7 +129,7 @@ jobs:
             --with-test
             --mirror https://cpan.metacpan.org
             --mirror http://cpan.cpantesters.org
-      - run: prove -l t xt
+      - run: prove -lr t
         env:
           AUTHOR_TESTING: 1
   test_windows:
@@ -174,6 +174,6 @@ jobs:
           cpanfile: "cpanfile"
           args: "--mirror https://cpan.metacpan.org --mirror http://cpan.cpantesters.org"
       - run: perl -V
-      - run: prove -l t xt
+      - run: prove -lr t
         env:
           AUTHOR_TESTING: 1
