--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,12 +4,10 @@ name: dzil build and test
 on:
   push:
     branches:
-      - "*"
+      - "master"
   pull_request:
     branches:
       - "*"
-  schedule:
-    - cron: "15 4 * * 0"  # Every Sunday morning
   workflow_dispatch:
 
 jobs:
@@ -19,7 +17,7 @@ jobs:
     strategy:
       max-parallel: 1
     container:
-      image: perldocker/perl-tester:5.32
+      image: perldocker/perl-tester:5.38
     steps:
       - uses: actions/checkout@v3
       - name: Allow for file ownership conflicts with Docker and GitHub Actions
@@ -55,6 +53,7 @@ jobs:
           - "5.32"
           - "5.34"
           - "5.36"
+          - "5.38"
     container:
       image: perldocker/perl-tester:${{ matrix.perl-version }}
       env:
@@ -101,6 +100,7 @@ jobs:
           - "5.32"
           - "5.34"
           - "5.36"
+          - "5.38"
     name: Perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     needs: build
     steps:
