Add optional dependency IO::Compress::Zstd to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ HTTP::Date = 6
 IO::Compress::Brotli = 0.004001
 IO::Compress::Bzip2 = 2.021
 IO::Uncompress::Brotli = 0.004001
+IO::Compress::Zstd = 2.214
 LWP::MediaTypes = 6
 MIME::Base64 = 2.1
 perl = 5.008001
